misc: Fix Modal Width overflowing, describe OSPF Broadcast address in packet sent events

--- a/src/components/modals/styles.module.css
+++ b/src/components/modals/styles.module.css
@@ -14,6 +14,7 @@
     position: absolute;
     background-color: white;
     min-width: 50vw;
+    max-width: 90vw;
     left: 50vw;
     top: 50vh;
     transform: translate(-50%, -50%);
